--- a/src/app-input.css
+++ b/src/app-input.css
@@ -10,16 +10,16 @@ input[type="search"],
 input[type="date"],
 select,
 textarea {
-	padding: 0.4rem;
+    padding: 0.4rem;
     width: 100%;
     height: 35px;
     font-size: 14px;
     border: 1px solid #ccc;
-	border-radius: 0.3rem;
-	background-color: #f5f5f5;
-	transition: all 0.1s ease;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    border-radius: 0.3rem;
+    background-color: #f5f5f5;
+    transition: all 0.1s ease;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
 }
 
@@ -53,10 +53,10 @@ input[type="search"]:focus,
 input[type="date"]:focus,
 select:focus,
 textarea:focus {
-	outline: none;
-	border-color: var(--info);
-	box-shadow: 0 0 0 1.5px rgba(59, 130, 246, 0.2);
-    background-color:#ffffff;
+    outline: none;
+    border-color: var(--info);
+    box-shadow: 0 0 0 1.5px rgba(59, 130, 246, 0.2);
+    background-color: #ffffff;
 }
 
 /* Placeholder styling */
@@ -69,8 +69,9 @@ input[type="search"]::placeholder,
 input[type="date"]::placeholder,
 select::placeholder,
 textarea::placeholder {
-	color: #9ca3af;
-	opacity: 1;
+    color: #9ca3af;
+    opacity: 1;
+    font-size: small;
 }
 
 /* Disabled state */
@@ -83,46 +84,49 @@ input[type="search"]:disabled,
 input[type="date"]:disabled,
 select:disabled,
 textarea:disabled {
-	background-color: #e0e0e0;
-	cursor: not-allowed;
+    background-color: #e0e0e0;
+    cursor: not-allowed;
 }
 
 .w-full {
-	width: 100%;
+    width: 100%;
 }
 
 /* checkbox */
 input[type="checkbox"] {
-	width: 1rem;
-	height: 1rem;
-	accent-color: #3b82f6;
-	cursor: pointer;
-	transition: all 0.1s ease;
+    width: 1rem;
+    height: 1rem;
+    accent-color: #3b82f6;
+    cursor: pointer;
+    transition: all 0.1s ease;
 }
+
 label.checkbox-label {
-	display: flex;
-	align-items: center;
-	gap: 0.5rem;
-	font-weight: 500;
-	color: var(--text);
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-weight: 500;
+    color: var(--text);
 }
+
 input[type="checkbox"]:focus {
-	outline: 2px solid #a7c1eb;
-	outline-offset: 1px;
+    outline: 2px solid #a7c1eb;
+    outline-offset: 1px;
 }
+
 input[type="checkbox"]:disabled {
-	cursor: not-allowed;
-	opacity: 0.6;
+    cursor: not-allowed;
+    opacity: 0.6;
 }
 
-
-
-/* messages */
+/* error css */
 .input-error {
     box-shadow: 0 0 0 1.5px rgba(239, 68, 68, 0.6);
 }
 
 .error-text {
-    color: #ef4444;
-    margin: 0.4rem 0 0 0;
+    color: #f44336;
+    margin-top: 4px;
+    margin-bottom: 0px !important;
+    text-align: left;
 }
