section , browser title , loader icon updated logic

--- a/src/app-input.css
+++ b/src/app-input.css
@@ -71,7 +71,7 @@ select::placeholder,
 textarea::placeholder {
     color: #9ca3af;
     opacity: 1;
-    font-size: small;
+    /* font-size: small; */
 }
 
 /* Disabled state */
