--- a/src/app.css
+++ b/src/app.css
@@ -710,7 +710,7 @@ tr:hover {
     background-color: hsla(221, 83%, 53%, 1);
 }
 
-.lucide {
+/* .lucide {
     color: var(--gray5);
     stroke-width: 2px;
     stroke: currentColor !important;
@@ -725,12 +725,26 @@ tr:hover {
 
 .lucide:hover {
     color: var(--clr-pri-light);
-}
+} */
 
 .lucide-log-out {
     color: #ff0000 !important;
 }
 
+.lucide-trash-2:hover {
+    color: #ff0000 !important; 
+}
+.lucide-circle-check-big{
+    color: #00f521 !important;
+}
+.lucide-eye:hover{
+    color:blue;
+}
+.lucide-camera-off{
+    color: gray;
+    width: 50px;
+    height: 50px;
+}
 @keyframes pulse {
     0% {
         transform: translateY(-2px) scale(1.1);
