--- a/src/app-input.css
+++ b/src/app-input.css
@@ -8,6 +8,7 @@ input[type="tel"],
 input[type="url"],
 input[type="search"],
 input[type="date"],
+input[type="number"],
 select,
 textarea {
     padding: 0.4rem;
@@ -38,6 +39,7 @@ input[type="tel"]:hover,
 input[type="url"]:hover,
 input[type="search"]:hover,
 input[type="date"]:hover,
+input[type="number"]:hover,
 select:hover,
 textarea:hover {
     background-color: #eaeaea;
@@ -51,6 +53,7 @@ input[type="tel"]:focus,
 input[type="url"]:focus,
 input[type="search"]:focus,
 input[type="date"]:focus,
+input[type="number"]:focus,
 select:focus,
 textarea:focus {
     outline: none;
@@ -67,6 +70,7 @@ input[type="tel"]::placeholder,
 input[type="url"]::placeholder,
 input[type="search"]::placeholder,
 input[type="date"]::placeholder,
+input[type="number"]::placeholder,
 select::placeholder,
 textarea::placeholder {
     color: #9ca3af;
@@ -82,6 +86,7 @@ input[type="tel"]:disabled,
 input[type="url"]:disabled,
 input[type="search"]:disabled,
 input[type="date"]:disabled,
+input[type="number"]:disabled,
 select:disabled,
 textarea:disabled {
     background-color: #e0e0e0;
