--- a/src/app.css
+++ b/src/app.css
@@ -1421,5 +1421,5 @@ button {
     font-size: 0.875rem;
 }
 
-.active, .inactive{color: green; background-color:lightgray; padding:5px 10px; border-radius:8px; font-weight: 500;}
-.inactive{color: red;}
+.active-status, .inactive-status{color: green; background-color:lightgray; padding:5px 10px; border-radius:8px; font-weight: 500;}
+.inactive-status{color: red;}
