--- a/src/app-input.css
+++ b/src/app-input.css
@@ -69,3 +69,11 @@ input[type='checkbox']:disabled {cursor: not-allowed; opacity: 0.6}
 /* error css */
 .input-error {box-shadow: 0 0 0 1.5px rgba(239, 68, 68, 0.6)}
 .error-text {color: #f44336; margin-top: 4px; margin-bottom: 0px !important; text-align: left}
+
+select {
+    appearance: none; /* Removes default arrow in some browsers */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%236b7280'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M19 9l-7 7-7-7'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.55rem center;
+    background-size: 1.25rem;
+}
