--- a/src/app.css
+++ b/src/app.css
@@ -134,7 +134,7 @@ h3,
 h4,
 h5,
 h6 {font-family: 'Roboto', sans-serif; font-size: 14px; font-weight: 700; margin: 0 0 1.5rem 0; /* line-height: 1.3; */}
-h1 {color: #2c3e50; letter-spacing: 1px; font-size: 16px}
+h1 {color: #2c3e50; font-size: 16px}
 h2 {color: #34495e; padding-bottom: 5px}
 p {font-size: 13px; margin-bottom: 12px}
 a {color: #3498db; text-decoration: none}
