--- a/src/app.css
+++ b/src/app.css
@@ -277,7 +277,7 @@ tr:hover {background-color: #eeeeee}
 .input-wrapper {text-align: left}
 .spinner {height: 1.25rem; width: 1.25rem; animation: spin 1s linear infinite; margin: 0 auto}
 .signup a {color: #2563eb; text-decoration: none}
-.class-container {display: flex; padding: 10px 0 10px 0}
+.class-container {display: flex; padding: 10px 0 10px 0; min-height:calc(100vh - 125px);}
 /* header  */
 .header {display: flex; justify-content: space-between; align-items: center; height: 50px; padding: 15px; box-shadow: var(--shadow-sm); position: relative}
 .header_logo {display: flex; align-items: center; margin-left: 2rem}
