--- a/src/app.css
+++ b/src/app.css
@@ -123,7 +123,8 @@
         /* hsl(206, 96%, 64%) */
     }
 }
-body {font-family: 'Roboto', sans-serif; font-size: 13px; color: var(--text); overflow-x: hidden}
+body { font-family: 'Roboto', sans-serif; font-size: 13px; color: var(--text); overflow-x: hidden}
+/* html {font-family: 'Inter', sans-serif;} */
 /* html {--bg-1: hsl(0, 0%, 100%); --bg-2: hsl(206, 20%, 90%); --bg-3: hsl(206, 20%, 80%); --fg-1: hsl(0, 0%, 13%); --fg-2: hsl(0, 0%, 20%); --fg-2: hsl(0, 0%, 30%); --link: hsl(208, 77%, 47%); --link-hover: hsl(208, 77%, 55%); --link-active: hsl(208, 77%, 40%); &.dark { --bg-1: hsl(0, 0%, 18%); --bg-2: hsl(0, 0%, 30%); --bg-3: hsl(0, 0%, 40%); --fg-1: hsl(0, 0%, 90%); --fg-2: hsl(0, 0%, 70%); --fg-3: hsl(0, 0%, 60%); --link: hsl(206, 96%, 72%); --link-hover: hsl(206, 96%, 78%); --link-active: hsl(206, 96%, 64%)}
 }
  */
@@ -133,7 +134,7 @@ h2,
 h3,
 h4,
 h5,
-h6 {font-family: 'Roboto', sans-serif; font-size: 13px; font-weight: 700; margin: 0 0 1.5rem 0; /* line-height: 1.3; */}
+h6 { font-size: 13px; font-weight: 700; margin: 0 0 1.5rem 0; /* line-height: 1.3; */}
 h1 {color: #2c3e50; font-size: 13px}
 h2 {color: #34495e; padding-bottom: 5px}
 p {font-size: 13px; margin-bottom: 12px}
@@ -142,7 +143,7 @@ a:hover {text-decoration: underline}
 input,
 select,
 textarea,
-label {font-family: 'Roboto', sans-serif; font-size: 13px}
+label { font-size: 13px}
 label {color: var(--text); width: 100%; font-weight: 700; display: block; margin-bottom: 5px}
 /* scrollbar */
 ::-webkit-scrollbar-track {background: var(--clr-bg-2)}
@@ -292,7 +293,7 @@ tr:hover {background-color: #eeeeee}
 .header-content {display: flex; justify-content: space-between; align-items: center; width: 100%}
 .pull-right {margin-left: auto; color: #64748b; transition: transform 0.2s ease}
 /* sidebar */
-.sidebar {width: 300px; max-width: 300px; min-height: 92vh; background: #fff; color: var(--clr-bg-5); transition: max-width 0.2s ease; overflow-y: auto; border-right: 1px solid #e2e8f0; font-family: Roboto, sans-serif; font-size: 13px; scroll-behavior: smooth}
+.sidebar {width: 300px; max-width: 300px; min-height: 92vh; background: #fff; color: var(--clr-bg-5); transition: max-width 0.2s ease; overflow-y: auto; border-right: 1px solid #e2e8f0;  font-size: 13px; scroll-behavior: smooth}
 .sidebar {overflow-y: hidden; scrollbar-gutter: stable; border-radius: var(--radius); background: var(--light); box-shadow: inset 0 6px 8px -8px rgba(0, 0, 0, 0.3)}
 .sidebar-menu {padding: 10px 0}
 .menu-group {margin-bottom: 2px}
@@ -374,8 +375,8 @@ button:disabled {opacity: 0.6; cursor: not-allowed}
 }
 .user-profile .menu-item:hover,
 .user-profile .menu-item:hover svg {background: var(--clr-bg-2); color: var(--clr-pri-light); border-radius: 0.4rem}
-button {font-family: 'Roboto', sans-serif; font-size: 13px; padding: 10px}
-.btn {font-family: 'Roboto', sans-serif; /* width: 100%; */ display: inline-flex; color: white; align-items: center; justify-content: center; gap: 5px; padding: 0.5rem 0.6rem; border: none; border-radius: var(--radius-sm); background-color: var(--clr-pri); font-weight: 500; cursor: pointer; transition: all 0.2s ease; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); height: 35px}
+button { font-size: 13px; padding: 10px}
+.btn { /* width: 100%; */ display: inline-flex; color: white; align-items: center; justify-content: center; gap: 5px; padding: 0.5rem 0.6rem; border: none; border-radius: var(--radius-sm); background-color: var(--clr-pri); font-weight: 500; cursor: pointer; transition: all 0.2s ease; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); height: 35px}
 /* .btn-secondary {color: white; background-color: var(--clr-bg-5)}
  */
 
