--- a/src/shared.css
+++ b/src/shared.css
@@ -1,9 +1,9 @@
 /* only used in the Svelte tutorial */
-@font-face {src: url('/tutorial/Garamond Classico SC Regular.woff2') format('woff2'); font-family: 'Silian Rail'; font-style: normal; font-weight: 400}
+@font-face {src: url('/tutorial/Garamond Classico SC Regular.woff2') format('woff2'); font-style: normal; font-weight: 400}
 /* this file is duplicated in the SvelteKit tutorial static assets. If you change it here, you should also change it there. */
 html {--bg-1: hsl(0, 0%, 100%); --bg-2: hsl(206, 20%, 90%); --bg-3: hsl(206, 20%, 80%); --fg-1: hsl(0, 0%, 13%); --fg-2: hsl(0, 0%, 20%); --fg-2: hsl(0, 0%, 30%); --link: hsl(208, 77%, 47%); --link-hover: hsl(208, 77%, 55%); --link-active: hsl(208, 77%, 40%); &.dark { --bg-1: hsl(0, 0%, 18%); --bg-2: hsl(0, 0%, 30%); --bg-3: hsl(0, 0%, 40%); --fg-1: hsl(0, 0%, 90%); --fg-2: hsl(0, 0%, 70%); --fg-3: hsl(0, 0%, 60%); --link: hsl(206, 96%, 72%); --link-hover: hsl(206, 96%, 78%); --link-active: hsl(206, 96%, 64%)}
 }
-body {--border-radius: 4px; --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; --font-mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; background: var(--bg-1); color: var(--fg-1); font-family: var(--font); line-height: 1.5; margin: 1rem; height: calc(100vh - 2rem)}
+body {--border-radius: 4px;  background: var(--bg-1); color: var(--fg-1); font-family: var(--font); line-height: 1.5; margin: 1rem; height: calc(100vh - 2rem)}
 h1,
 h2,
 h3,
@@ -21,7 +21,7 @@ label {display: flex; gap: 0.5rem; align-items: center}
 label input {margin: 0}
 button,
 input,
-select {font-family: inherit; font-size: inherit}
+select {font-size: inherit}
 button {background: var(--link); color: var(--bg-1); padding: 0.5rem 1rem; border: none; border-radius: var(--border-radius)}
 button:hover {background: var(--link-hover)}
 button:active {background: var(--link-active)}
